  - Added debugger support for the term gui using a pseudo-terminal.

- I/O Devices
  - Hard drive
    - Re-enable "bulk I/O" repeat speedups extension.
    - Added Oracle(tm) VM VirtualBox image support (VDI version 1.1)
  - Sound
    - SB16: Fixed OPL chip detection by implementing ISA bus delay.
    - SB16: Ported OPL3 emulation from DOSBox and partly removed legacy code.
    - ES1370: Fixed critical bug that made Win9x drivers crash.
    - Major rewrite of the lowlevel sound code.
      - Added mixer thread support (required for all modules except 'sdl').
      - New mixer and SDL mixer are polling data from the PCM output buffers,
        the PC speaker beep generator and the OPL3 FM generator.
      - PCM format conversion to 16 bit signed little endian.
      - Added sound 'file' module for VOC, WAV, MID and raw data output
        and added dual output support (device+file) in midi/wave mode 3.
      - Added capability to set up the sound driver per service.
  - Floppy
    - Fixed "Read ID" command for single-sided media (patch by Ben Lunt).

- ROM BIOS
  - Fixed keyboard scancode processing after keyboard intercept.

-------------------------------------------------------------------------
Changes in 2.6.7 (November 2, 2014):

- CPU / CPUDB
  - Implemented AVX-512BW/AVX-512DQ/AVX-512VL extensions emulation.
  - implemented AVX512-IFMA532 instructions emulation.
  - implemented AVX512-VBMI instructions emulation.
  - Bugfixes for CPU emulation correctness (critical fixes for AVX-512, CMPXCHG16B and VMX)
  - Fixed Bochs segmentation fault crash with Handlers Chaining Speedups enabled when
    compiling with gcc, especially with low optimization levels.
  - Reverted removal of reporting Architectural Perfmon support in pre-defined CPUID modules.
    Windows 8 and Windows 10 require Performance Monitoring to be reported to boot.
    To workaround possible Windows 7 64-bit installation issues: use bx_generic CPUID module,